--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "template-cli",
-  "description": "A simple tool for writing and generating templates for projects. Template CLI is a simplified yeoman.",
+  "name": "stencils",
+  "description": "A simple CLI tool for writing and generating templates for projects. Template CLI is a simplified yeoman.",
   "version": "0.1.0",
   "license": "MIT",
   "bin": {
-    "tmpl": "./bin/tmpl.js"
+    "tmpl": "./bin/stpl.js"
   },
   "author": "Justin Beaudry <beaudry.justin@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JustinBeaudry/template-cli.git"
+    "url": "git+https://github.com/JustinBeaudry/stencils.git"
   },
   "bugs": {
-    "url": "https://github.com/JustinBeaudry/template-cli/issues"
+    "url": "https://github.com/JustinBeaudry/stencils/issues"
   },
   "dependencies": {
     "async": "^2.5.0",
