--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "stencils",
   "description": "A simple CLI tool for writing and generating templates for projects; a simplified yeoman.",
-  "version": "0.5.8-alpha",
+  "version": "0.5.9-alpha",
   "license": "MIT",
   "bin": {
-    "stl": "./bin/index.js"
+    "stl": "./bin/cli.js"
   },
   "author": "Justin Beaudry <beaudry.justin@gmail.com>",
   "repository": {
