add jsdoc as dev dep

--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "mustache": "^2.3.0",
     "opn": "^5.1.0",
     "yargs": "^8.0.2"
+  },
+  "devDependencies": {
+    "jsdoc": "^3.5.4"
   }
 }
