--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stencils",
   "description": "A simple CLI tool for managing and generating templates for projects; a simplified yeoman.",
-  "version": "0.9.4-alpha",
+  "version": "0.20.0-alpha",
   "license": "MIT",
   "engines": {
     "node": ">= 8.4.0"
@@ -28,6 +28,7 @@
     "moment": "^2.18.1",
     "mustache": "^2.3.0",
     "opn": "^5.1.0",
+    "rimraf": "^2.6.2",
     "yargs": "^8.0.2"
   },
   "devDependencies": {
